@@ -1,3 +1,8 @@
+2006-10-23  Arno Rehn  <arno@arnorehn.de>
+
+	* Added more code for marshalling QLists. QList<T> return types
+	  should now work for all QLists where T is not a primitive type.
+
 2006-10-23  Richard Dale  <rdale@foton.es>
 
 	* When a QMetaObject was constructed, the parent was wrongly being
